Fix clipping of rounded buttons, integrate switcher p1.

--- a/components/input/FileUploadButton.module.css
+++ b/components/input/FileUploadButton.module.css
@@ -8,6 +8,8 @@
 	justify-content: space-around;
 	align-items: center;
 
+	padding: 0.75em;
+
 	border: 0.5px solid rgba(255, 255, 255, 0.5);
 }
 
