--- a/components/input/OutlinedOptionSelector.module.css
+++ b/components/input/OutlinedOptionSelector.module.css
@@ -14,6 +14,16 @@
 	height: 100%;
 }
 
+.outlinedSelector>*:first-child {
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+}
+
+.outlinedSelector>*:last-child {
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
 .selectorItem {
 	display: flex;
 
@@ -22,10 +32,11 @@
 	justify-content: center;
 	align-items: center;
 
+	background-color: #101010;
+
 	flex-grow: 1;
 
-	padding-left: 0.5em;
-	padding-right: 0.5em;
+	padding: 0.75em;
 
 	transition: 0.3s;
 }
@@ -56,14 +67,18 @@
 }
 
 .selectorItem:hover {
-	background-color: #101010;
+	background-color: #000000;
 }
 
-.middleItem {
+.middleItem:not(:last-child) {
 	border-right: 0.5px solid rgba(255, 255, 255, 0.5);
 }
 
 .selectedItem {
 	font-weight: bold;
-	background-color: black; 
+	background-color: #1D1D1D;
+}
+
+.selectedItem:hover {
+	background-color: #141414;
 }
